--- a/src/views/main/layout/menu/menu.scss
+++ b/src/views/main/layout/menu/menu.scss
@@ -1,20 +1,17 @@
-.el-menu {
-	// 菜单背景透明
-	--custom-menu-active-color: #fff;
-}
-
-// 菜单背景深色
-.app-layout.horizontal,
-.app-layout.vertical {
-		.el-menu {
-			&.dark,
-			&.auto {
-				--custom-menu-active-color: var(--el-menu-text-color);
-			}
-		}
-}
 
 .el-menu {
+	--el-menu-item-font-size: 13.6px;
+	border: none;
+	.el-sub-menu__title span,
+	.el-menu-item span {
+		line-height: normal;
+	}
+
+	.el-icon svg {
+		width: 16px;
+		height: 16px;
+	}
+
 	// 追加 .is-active 样式
 	.el-menu-item.is-active,
 	&.el-menu--horizontal>.el-sub-menu.is-active .el-sub-menu__title {
@@ -47,11 +44,25 @@
 
 }
 
-.el-menu--horizontal.el-menu .el-sub-menu.is-active>.el-sub-menu__title {
+// 自定义水平菜单样式
+.el-menu--horizontal > {
+	.el-menu-item,
+	.el-menu-item.is-active,
+	.el-sub-menu.is-active .el-sub-menu__title,
+	.el-sub-menu .el-sub-menu__title {
+		border-bottom: none;
+	}
+}
+
+.el-menu--horizontal .el-menu .el-menu-item.is-active {
+	color: #fff;
+}
+
+.el-menu--horizontal .el-menu .el-sub-menu.is-active>.el-sub-menu__title {
+	color: var(--el-menu-text-color);
 	&:hover{
 		color: #fff;
 	}
-	color: var(--el-menu-text-color);
 }
 
 .el-menu--vertical.el-menu {
