--- a/src/assets/style/css-vars.scss
+++ b/src/assets/style/css-vars.scss
@@ -22,6 +22,21 @@
 	--ani-transfrom-x-distance-re: -50px;
 }
 
+// 布局预设变量
+:root {
+	--layout-logo-width: 40px;
+	--layout-collapse-aside-width: 64px;
+	--layout-padding: 8px;
+	--layout-margin: 8px;
+	--layout-topbar-height: 48px;
+	--layout-topbar-z-index: 980;
+	--layout-tab-height: 38px;
+	--layout-tab-z-index: 900;
+	--layout-sider-width: 256px;
+	--layout-sider-z-index: 990;
+	--layout-footer-height: 36px;
+}
+
 html.dark {
     --el-bg-color:  var(--dark-bg-color);
 }
