feature: add gray mode

--- a/src/assets/style/css-vars.scss
+++ b/src/assets/style/css-vars.scss
@@ -20,6 +20,7 @@
 	--ani-timing-function: cubic-bezier(0.7, 0.3, 0.1, 1);
 	--ani-transfrom-x-distance: 50px;
 	--ani-transfrom-x-distance-re: -50px;
+	--gray-percent: 0;
 }
 
 // 布局预设变量
